# pickle

./: .gitignore  Makefile  README.md  schema.sql
client/: package.json
client/src/: data.js  index.css  index.html
client/src/components/: disease-select.js  loading.js  main.js  not-found.js  region-select.js
client/src/components/disease/: compare.js  faq.js  header.js  map.js  news.js
scraper/: covid-19.py  region.py  requirements.txt  swineflu.py
server/: Cargo.toml
server/src/: database.rs  disease.rs  geolocation.rs  id.rs  main.rs  region.rs  util.rs
