[package]
name = "pickle"
version = "0.1.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
badlog = "1.1"
base64 = "0.12"
bb8-postgres = { version = "0.4", features = ["with-chrono-0_4"] }
celes = "1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
maxminddb = "0.13"
reqwest = "0.10"
rss = "1.0"
serde = "1"
serde_json = "1"
tokio = { version = "0.2", features = ["full"] }
warp = { git = "https://github.com/seanmonstar/warp.git", features = ["compression"] }

[build-dependencies]
flate2 = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
tar = "0.4"
